$MirOS: contrib/code/jupp/NEWS,v 1.100 2016/10/07 20:07:49 tg Exp $
-------------------------------------------------------------------

JOE-current

- Fix <bsd/string.h> usage issue on Haiku
- Make some signal handlers a bit more safe
- Remove unused Unicode categorisations (~15K in the binary)
- Update internationalisation data to Unicode 10.0.0

JOE 3.1jupp30

- Fix spelling mistakes, some found by lintian (thanks!)
- Silence a GCC 6 warning about content of a comment (WTF‽)
- Fix segfault trying to fnext a block-restricted search when
  no block is active
- Make Freedroidz macro (^KF) more reliable, simpler, run parserr
- Apply several bugfixes and optimisations to the code
- Improve the jupp32 build script
- Fix a few places where allocated memory was not properly zero’d out
- Unbreak syntax highlighting for nōn-UTF8 locales (tty I/O charmaps)
- For systems without setlocale, remove optional @modifier part from
  LC_ALL/LC_CTYPE/LANG (if present) before testing for valid charmap
- Disable setlocale for old cygwin32; use the current codepage instead
- Add JOECHARMAP override for locale/codepage-detected I/O charmap
- Display codes 128–159 in the CharTable help card properly
– Avoid the Win32 console beeping on • by making it non-printable (WTF)
- Improve some documentation façets
- Add “-CYGhack” command line option; use it in right-click menu (WTF²)
- Do not force use of /usr/local in configure on Solaris
- Use ~/.jupp/, not ~/.joe/, as basepath for user charmap/syntax files

JOE 3.1jupp29

- Update internationalisation data to Unicode 9.0.0
- Bind execmd in jstarrc, so all flavours bind it
- Fix paths in joe(1) manpage
- jupprc: ^Q= searches for merge conflict markers (CVS, git)
- Add syntax file for tex (LaTeX; *.cls *.sty *.tex)
- Make syntax highlighting code use UTF-8 by individual octets
- ^Q] now also works for ASCII quotation marks (jupp, jstar)
- ^Q[ is distinct from ^Q] when ambiguous (jupp, jstar)
- Unbreak tab-completing filenames with spaces